--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -8,11 +8,19 @@
 
 
 <div>
+    
+    <a href={% url 'create-room' %}>Create Room</a>
+    <hr>
     <div>
         {% for  room in rooms %}
             <div>
-                <h5>{{room.id}} --- <a href="{% url 'room' room.id %}">{{room.name}}</a></h5>
+                <span>@{{room.host}}</span>
+                <h5>{{room.id}} --- <a href="{% url 'room' room.id  %}">{{room.name}}</a></h5>
+                <small>{{room.topic}}</small>
+                <hr>
             </div>
+
+
         {% endfor %}
     </div>
 </div>
