--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 
+
+{% if page == 'login' %}
 <div>
 
         <form method = 'POST' action = ''>
@@ -17,12 +19,28 @@
 
             <input type = 'submit' value = 'Login' />
         </form>
-
+        <p>havent signed up yet?</p>
+        <a href = "{% url 'registeration' %}">Register</a>
 
 </div>
 
+{% endif %}
+{% if page == 'register' %}
 
+<div>
 
+    <form method = 'POST' action = ''>
+        {% csrf_token %}
+        
+
+        <input type = 'submit' value = 'Register' />
+    </form>
+    <p>Already signed up?</p>
+    <a href = "{% url 'login' %}">Login</a>
+
+</div>
+
+{% endif %}
 {% endblock content %}
 
 
