--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,8 +6,13 @@
     <input type = "text"  name = "q"  placeholder = " Search Rooms..."/>
 </form>
 
+{% if request.user.is_authenticated %}
 
+<a href = "{% url 'logout' %}" >Logout</a>
 
-<a href = "{% url 'login' %}" action = "">Login</a>
+{% else %}
 
+<a href = "{% url 'login' %}" >Login</a>
+
+{% endif %}
 <hr>
