--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -19,21 +19,21 @@
 
             <input type = 'submit' value = 'Login' />
         </form>
-        <p>havent signed up yet?</p>
-        <a href = "{% url 'registeration' %}">Register</a>
+        <p>haven't signed up yet?</p>
+        <a href = "{% url 'register' %}" >Sign up</a>
 
 </div>
 
-{% endif %}
-{% if page == 'register' %}
+{% else %}
 
 <div>
 
     <form method = 'POST' action = ''>
         {% csrf_token %}
-        
-
+           
+        {{form.as_p}}
         <input type = 'submit' value = 'Register' />
+ 
     </form>
     <p>Already signed up?</p>
     <a href = "{% url 'login' %}">Login</a>
