--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,7 +7,7 @@
 </form>
 
 {% if request.user.is_authenticated %}
-
+<p>Welcome {{request.user}}</p>
 <a href = "{% url 'logout' %}" >Logout</a>
 
 {% else %}
