--- a/templates/main.html
+++ b/templates/main.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html>
-<head>
+{% load static %}
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
+    <title>StudyBuddy - Find study partners around the world!</title>
+  </head>
 
-<meta charset='utf-8'>
-<meta http-equiv='X-UA-Compatible' content='IE=edge'>
-<title> StudyBud </title> 
-<meta name='viewport' content='width=device-width, initial-scale=1'>
-<!-- <link rel='stylesheet' type='text/css' media='screen' href='main.css'> -->
-
-</head>
-
-<body>
+  <body>
+    
     {% include 'navbar.html' %}
-
-
+   
     {% if messages %}
     <ul class="messages">
         {% for message in messages %}
@@ -28,7 +28,12 @@
         
     
     {% endblock content %}
-
-
-</body>
+   
+    <script src="{% static 'js/script.js' %}"></script>
+  </body>
 </html>
+
+
+
+
+
