--- a/templates/main.html
+++ b/templates/main.html
@@ -14,13 +14,13 @@
     
     {% include 'navbar.html' %}
    
-    {% if messages %}
+    <!--{% if messages %}
     <ul class="messages">
         {% for message in messages %}
             <li>{{ message }}</li>
         {% endfor %}
     </ul>
-    {% endif %}
+    {% endif %}-->
 
 
     {% block content %}
