--- a/base/templates/base/room_form.html
+++ b/base/templates/base/room_form.html
@@ -67,7 +67,7 @@
             </div>--> 
             <div class="form__action">
               <a class="btn btn--dark" href="{{request.META.HTTP_REFERER}}">Cancel</a>
-              <button class="btn btn--main" type="submit">Create Room</button>
+              <button class="btn btn--main" type="submit">Submit</button>
             </div>
           </form>
         </div>
